Renderizando tasks cadatradas em banco

--- a/src/components/SupportButton/styles.module.scss
+++ b/src/components/SupportButton/styles.module.scss
@@ -3,7 +3,7 @@
   bottom: 70px;
   right: 50px;
   display: flex;
-  margin-right: 358px;
+  /* margin-right: 358px; */
   z-index: 99;
 
   button {
