--- a/src/styles/styles.module.scss
+++ b/src/styles/styles.module.scss
@@ -2,6 +2,7 @@
   max-width: 1120px;
   margin: 0 auto;
   padding: 0 2rem;
+  min-height: calc(100vh - 6rem);
 
   display: flex;
   align-items: center;
@@ -39,6 +40,18 @@
 
 }
 
+.donatersTitle {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 32px;
+
+  color: black;
+  font-size: 21px;
+  font-weight: bold;
+}
+
+
 .donaters {
   display: flex;
   justify-content: center;
@@ -63,16 +76,3 @@
 
 
 }
-
-.donatersTitle {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 32px;
-
-  color: black;
-  font-size: 21px;
-  font-weight: bold;
-}
-
-
